--- a/tutorial/styles/globals.css
+++ b/tutorial/styles/globals.css
@@ -1,11 +1,22 @@
 html,
 body {
+    background-color: black;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+h1, h3, p, span {
+    color: white;
+    
+}
+ 
+
+h2 {
+    font-size: 3rem;
+    color: #dea404;
+}
 a {
   color: inherit;
   text-decoration: none;
